# whoa-scope

./: README.md
Software/: .gitignore  O-Scope.py  kvplot.py  pyproject.toml  scopeui.kv  settings_manager.py
