[project]
name = "whoa-scope"
version = "2.4.0"
description = "Add your description here"
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "kivy>=2.3.1",
    "numpy>=2.2.6",
    "pillow>=12.1.0",
    "plyer>=2.1.0",
    "pyobjus>=1.2.4",
    "pyserial>=3.5",
    "sigfig>=1.3.19",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
]
